--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>GetHttpHeaders</title>
-        <!-- <meta name="description" content="GetHttpHeaders"> -->
-        <!-- <meta name="author" content="R3ality"> -->
-        <link rel="stylesheet" href="css/style.css?v=1.0">
+        <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous" /> -->
+        <link rel="stylesheet" href="css/style.css?v=1.0" />
     </head>
 
     <body>
         <script src="js/script.js"></script>
-        Asdf
+        <!-- <a class="pure-button" href="#" id="getHttpHeaders" onclick="getHttpHeaders();">Get HTTP headers</a> -->
     </body>
 </html>
